# papki

.github/workflows/: ci.yml
cmake/: CMakeLists.txt
